2011-07-18 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.9

	*pi1:  debugging of orderBy statement by order field (and not path)
		  included exceptions for Produktmappe BGM and GB

2011-07-08 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.8

	*pi1:  changed call for jquery api at google from http to https
	*pi4:  changed call for jquery api at google from http to https

2011-07-06 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.7

	*pi1:  debugging of orderBy statement by order field (and not path)

2010-06-16 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.6

	* debugging label of download button for special usage

...

2010-06-16 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de>

	* initial code generated with kickstarter